--- a/index.html
+++ b/index.html
@@ -73,8 +73,14 @@
                     <li class="nav-item">
                         <a class="nav-link active" href="index.html">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="beers.html">Beers</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Beers</a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="beers.html">All Beers</a>
+                            <a class="dropdown-item" href="/beers.html#lagers-pilsners">Lagers & Pilsners</a>
+                            <a class="dropdown-item" href="/beers.html#ipa-ale">IPA's & Pale Ales</a>
+                            <a class="dropdown-item" href="/beers.html#stouts-porters">Stouts & Porters</a>
+                        </div>
                     </li> 
                     <li class="nav-item">
                         <a class="nav-link" href="breweries.html">Breweries</a>
