beer descriptions added to stouts and porters in beer.html

--- a/beers.html
+++ b/beers.html
@@ -395,8 +395,8 @@
                     <img src="https://www.thecressco.co.uk/imagecache/843ff39c-e1f9-4bd1-9372-a91f00ec3198_800x800.jpg" alt="Dark Ness Stout" class="beer-image">
                     <div class="overlay">
                         <h5 class="card-title">Dark Ness</h5>
-                        <p class="card-text"><small>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo consequatur cupiditate omnis temporibus iste eaque accusantium, consectetur rerum.</small></p>
-                        <p class="card-text"><small>4.4% abv</small></p>
+                        <p class="card-text"><small>A full, flavoursome stout, with chocolate malt & roast barley. A creamy head with aromas of coffee & sweet chocolate, leading to hints of espresso & luxurious black cherry.</small></p>
+                        <p class="card-text"><small>4.4% abv | 500ml</small></p>
                         <img src="https://drthebeerbloguk.files.wordpress.com/2018/02/loch-ness-logo.png?w=450" alt="Loch Ness Brewery Logo" class="beer-image-logo">
                     </div>
                 </div>
@@ -404,8 +404,8 @@
                     <img src="https://www.dunnsfoodanddrinks.co.uk/content/images/big_product_images/81763.png" alt="Skye Black Beer" class="beer-image">
                     <div class="overlay">
                         <h5 class="card-title">Skye Black</h5>
-                        <p class="card-text"><small>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo consequatur cupiditate omnis temporibus iste eaque accusantium, consectetur rerum.</small></p>
-                        <p class="card-text"><small>4.5% abv</small></p>
+                        <p class="card-text"><small>The colour comes from dark roasted barley, balanced with just the right amount of sweet. The true taste of malt shines through, balanced with Scottish heather honey.</small></p>
+                        <p class="card-text"><small>4.5% abv | 500ml</small></p>
                         <img src="https://pbs.twimg.com/profile_images/462266719910633472/hGbsV79Y.jpeg" alt="Isle of Skye Brewery Logo" class="beer-image-logo">
                     </div>
                 </div>
@@ -413,8 +413,8 @@
                     <img src="https://untappd.akamaized.net/site/beer_logos_hd/beer-3288537_14934_hd.jpeg" alt="Black Rock" class="beer-image">
                     <div class="overlay">
                         <h5 class="card-title">Black Rock Stout</h5>
-                        <p class="card-text"><small>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo consequatur cupiditate omnis temporibus iste eaque accusantium, consectetur rerum.</small></p>
-                        <p class="card-text"><small>4.5% abv</small></p>
+                        <p class="card-text"><small>Black Rock Stout includes chocolate malt, oats and roasted barley with a combination of English hops to create flavours of high cocoa chocolate and espresso coffee.</small></p>
+                        <p class="card-text"><small>4.5% abv | 500ml</small></p>
                         <img src="https://pbs.twimg.com/profile_images/1867281747/islay-ales.gif" alt="Islay Ales Logo" class="beer-image-logo">
                     </div>
                 </div>
@@ -422,8 +422,8 @@
                     <img src="https://www.eebria.com/media/products/3154/20180219160315455/450x450.jpg" alt="Mexicake Stout" class="beer-image">
                     <div class="overlay">
                         <h5 class="card-title">Mexicake</h5>
-                        <p class="card-text"><small>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo consequatur cupiditate omnis temporibus iste eaque accusantium, consectetur rerum.</small></p>
-                        <p class="card-text"><small>12.4% abv</small></p>
+                        <p class="card-text"><small>A homage to Mexico, Mexicake is a rich, boozy imperial stout infused with vanilla beans, cocoa, cinnamon, chipotle and mulato chiles</small></p>
+                        <p class="card-text"><small>12.4% abv | 330ml</small></p>
                         <img src="https://www.tempestbrewco.com/sites/tempest/images/og-image.jpg" alt="Tempest Brewery Logo" class="beer-image-logo">
                     </div>
                 </div>
@@ -431,8 +431,8 @@
                     <img src="https://noblegreen-production.s3-eu-west-2.amazonaws.com/spree/images/16422/large/OR0QZZBK-1.png?1606933966" alt="Dark Island Stout" class="beer-image">
                     <div class="overlay">
                         <h5 class="card-title">Dark Island</h5>
-                        <p class="card-text"><small>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo consequatur cupiditate omnis temporibus iste eaque accusantium, consectetur rerum.</small></p>
-                        <p class="card-text"><small>4.6% abv </small></p>
+                        <p class="card-text"><small>Dark Island offers ripe, fruity and roast coffee aromas with flavours of dark chocolate, dates and nuts, from the combination of roasted malts and robust hops.</small></p>
+                        <p class="card-text"><small>4.6% abv | 500ml</small></p>
                         <img src="https://brewerydb-images.s3.amazonaws.com/brewery/z9kt21/upload_VpFoxz-squareLarge.png" alt="Orkney Brewery Logo" class="beer-image-logo">
                     </div>
                 </div>
@@ -440,17 +440,17 @@
                     <img src="https://www.eebriatrade.com/media/products/15180/20190116152401308/450x450.jpg" alt="Night Shift Black IPA" class="beer-image">
                     <div class="overlay">
                         <h5 class="card-title">Night Shift Black IPA</h5>
-                        <p class="card-text"><small>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo consequatur cupiditate omnis temporibus iste eaque accusantium, consectetur rerum.</small></p>
-                        <p class="card-text"><small>6.5% abv </small></p>
+                        <p class="card-text"><small>When the Day Shift is done, the Night Shift takes over. Velvety and smooth with a biting hoppiness of Simcoe & Yellow Sub that guarantees instant pleasure</small></p>
+                        <p class="card-text"><small>6.5% abv | 330ml</small></p>
                         <img src="https://www.fiercebeer.com/uploads/images/cms/gallery/1557998970FierceBreweryExterior004.jpg" alt="Fierce Brewery Logo" class="beer-image-logo">
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-2 beer-image-container">
                     <img src="https://www.eebriatrade.com/media/products/3913/20181221124850000/450x450.jpg" alt="Hibernator Oatmeal Stout" class="beer-image">
                     <div class="overlay">
-                        <h5 class="card-title">Hibernator Oatmeal Stout</h5>
-                        <p class="card-text"><small>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo consequatur cupiditate omnis temporibus iste eaque accusantium, consectetur rerum.</small></p>
-                        <p class="card-text"><small>7% abv</small></p>
+                        <h5 class="card-title">Hibernator</h5>
+                        <p class="card-text"><small>Roasted malts, hedgerow fruit, espresso and liquorice. Big, black and wholesome. Naturally bottle conditioned it is then secondary fermented in the bottle.</small></p>
+                        <p class="card-text"><small>7% abv | 330ml</small></p>
                         <img src="https://pbs.twimg.com/profile_images/1128983707560419329/g7mEfYme_400x400.png" alt="Black Isle Brewery Logo" class="beer-image-logo">
                     </div>
                 </div>
@@ -458,8 +458,8 @@
                     <img src="https://www.cromartybrewing.com/media/products/BHD_330.jpg" alt="Black Hop Down Black IPA" class="beer-image">
                     <div class="overlay">
                         <h5 class="card-title">Black Hop Down</h5>
-                        <p class="card-text"><small>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo consequatur cupiditate omnis temporibus iste eaque accusantium, consectetur rerum.</small></p>
-                        <p class="card-text"><small>7.2% abv</small></p>
+                        <p class="card-text"><small>Simcoe, Chinook & Cloumbus hops, wicked malts and some balls to the wall wizardry make this a dark beer light.</small></p>
+                        <p class="card-text"><small>7.2% abv | 330ml</small></p>
                         <img src="https://pbs.twimg.com/profile_images/1077548755052888070/Kf-RZhaU.jpg" alt="Cromarty Brewery Logo" class="beer-image-logo">
                     </div>
                 </div>
@@ -467,8 +467,8 @@
                     <img src="https://cdn.diffords.com/contrib/bws/2017/10/59db9066b6bd8.JPG" alt="Kelpie Seaweed Ale" class="beer-image">
                     <div class="overlay">
                         <h5 class="card-title">Kelpie Seaweed Ale</h5>
-                        <p class="card-text"><small>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo consequatur cupiditate omnis temporibus iste eaque accusantium, consectetur rerum.</small></p>
-                        <p class="card-text"><small>4.4% abv</small></p>
+                        <p class="card-text"><small>Fresh seaweed used in the mash turn give this rich dark chocolate ale a distinctive aroma of the fresh Scottish sea breeze and malty texture.</small></p>
+                        <p class="card-text"><small>4.4% abv | 330ml</small></p>
                         <img src="https://www.williamsbrosbrew.com/assets/static/img/wb-logo-meta.png" alt="Williams Brother Logo" class="beer-image-logo">
                     </div>
                 </div>
@@ -476,8 +476,8 @@
                     <img src="https://www.royalmilewhiskies.com/pub/media/catalog/product/cache/844013aff778fcf6107f66a3040c735a/b/a/ba1219.jpg" alt="Chew Chew Milk Stout" class="beer-image">
                     <div class="overlay">
                         <h5 class="card-title">Chew Chew Salted Caramel Milk Stout</h5>
-                        <p class="card-text"><small>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo consequatur cupiditate omnis temporibus iste eaque accusantium, consectetur rerum.</small></p>
-                        <p class="card-text"><small>6% abv</small></p>
+                        <p class="card-text"><small>Primarily a sweet, briney, chewy beer brewed with dark Belgian candi syrup, lactose and sea salt for a moreish dessert beer.</small></p>
+                        <p class="card-text"><small>6% abv | 440ml</small></p>
                         <img src="https://drthebeerbloguk.files.wordpress.com/2017/11/fallen.jpg?w=863" alt="Fallen Brewery Logo" class="beer-image-logo">
                     </div>
                 </div>
@@ -485,8 +485,8 @@
                     <img src="https://www.eebriatrade.com/media/products/32092/20201120104839906/450x450.jpg" alt="Affogato Stout" class="beer-image">
                     <div class="overlay">
                         <h5 class="card-title">Affogato</h5>
-                        <p class="card-text"><small>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo consequatur cupiditate omnis temporibus iste eaque accusantium, consectetur rerum.</small></p>
-                        <p class="card-text"><small>5.5% abv </small></p>
+                        <p class="card-text"><small>A complex grain bill with a depth of roasted malt and sweet caramel flavours. This decadent beer is cold-conditioned with Colombian coffee beans.</small></p>
+                        <p class="card-text"><small>5.5% abv | 440ml</small></p>
                         <img src="https://pbs.twimg.com/profile_images/1244672336109998091/Wgll8BUW.jpg" alt="Stewarts Brewery Logo" class="beer-image-logo">
                     </div>
                 </div>
@@ -494,7 +494,7 @@
                     <img src="https://www.eebriatrade.com/media/products/31372/20201027132528961/450x450.jpg" alt="Dark Days Stout" class="beer-image">
                     <div class="overlay">
                         <h5 class="card-title">Dark Days</h5>
-                        <p class="card-text"><small>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo consequatur cupiditate omnis temporibus iste eaque accusantium, consectetur rerum.</small></p>
+                        <p class="card-text"><small>Fermented in whisky barrels, Dark Days is an Imperial Stout with aromas of peaches and nectarines, which subside to caramel, sultanas and toffee in the finish.</small></p>
                         <p class="card-text"><small>8.1% abv </small></p>
                         <img src="https://pbs.twimg.com/profile_images/1034191072375791622/s2G5sR8h_400x400.jpg" alt="Six Degrees North Logo" class="beer-image-logo">
                     </div>
