scope added to README.md

--- a/breweries.html
+++ b/breweries.html
@@ -145,7 +145,7 @@
                         <div class="card-body brew-card-body">
                             <h5 class="card-title"><strong>Fallen Brewing Co.</strong></h5>
                             <p class="card-title text-uppercase">Stirling</p>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident libero amet ullam quae mollitia ipsam optio ipsum voluptatum beatae consequatur hic, illum aperiam tempore dolores nostrum, omnis odit impedit dicta!</p>
+                            <p class="card-text">Fallen Brewery brew in the old Kippen railway station in Stirlingshire. Their outlook and love of full-flavoured beer ensure they combine a progressive approach with a healthy respect for tradition and heritage.</p>
                             <a href="https://www.fallenbrewing.co.uk" target="_blank" class="btn btn-sm card-button">Visit Website</a>
                         </div>
                     </div>
@@ -156,7 +156,7 @@
                         <div class="card-body brew-card-body">
                             <h5 class="card-title"><strong>71 Brewing</strong></h5>
                             <p class="card-title text-uppercase">Dundee</p>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident libero amet ullam quae mollitia ipsam optio ipsum voluptatum beatae consequatur hic, illum aperiam tempore dolores nostrum, omnis odit impedit dicta!</p>
+                            <p class="card-text">Dundee's only brewery have been crafting crisp lagers and seasonal beers inspired by progressive new world flavours and traditional classics since 2016. Driven by a creative spark their beers are matched by quality and consistency.</p>
                             <a href="https://www.71brewing.com" target="_blank" class="btn btn-sm card-button">Visit Website</a>
                         </div>
                     </div>
@@ -167,7 +167,7 @@
                         <div class="card-body brew-card-body">
                             <h5 class="card-title"><strong>Stewart Brewing</strong></h5>
                             <p class="card-title text-uppercase">Edinburgh</p>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis laboriosam in assumenda? Repellendus aspernatur nemo earum quisquam illo, excepturi delectus possimus deserunt voluptatibus culpa repellat aut.</p>
+                            <p class="card-text">Edinburgh's original craft brewery founded in 2004, has seen demand soar since their inception meaning they now have a custom built premise which is catered to the public. A visit here with their onsite Taproom is not to be missed.</p>
                             <a href="https://www.stewartbrewing.co.uk" target="_blank" class="btn btn-sm card-button">Visit Website</a>
                         </div>
                     </div>
@@ -203,7 +203,7 @@
                         <div class="card-body brew-card-body">
                             <h5 class="card-title"><strong>Loch Ness Brewery</strong></h5>
                             <p class="card-title text-uppercase">Aviemore</p>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum explicabo expedita vero quo dicta officiis iure corrupti incidunt ullam aperiam dolor maxime similique voluptatibus, omnis facere quaerat. </p>
+                            <p class="card-text">Originally situated on the shores of the mysterious stretch of water, home of "Nessie", their new home in Aviemore means they still get their Highland water from the Monadliath Mountains, allowing maximum flavour to be extracted from the malts & hops. </p>
                             <a href="https://www.lochnessbrewery.com" target="_blank" class="btn btn-sm card-button">Visit Website</a>
                         </div>
                     </div>
@@ -214,7 +214,7 @@
                         <div class="card-body brew-card-body">
                             <h5 class="card-title"><strong>Black Isle Brewing Co.</strong></h5>
                             <p class="card-title text-uppercase">Munlochy</p>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident libero amet ullam quae mollitia ipsam optio ipsum voluptatum beatae consequatur hic, illum aperiam tempore dolores nostrum, omnis odit impedit dicta!</p>
+                            <p class="card-text">Black Isle founder David Gladwin set out to make world class beer using barley and hops grown on organic farms without the use of destructive chemicals. Today they brew up to 10,000 litres a day, and you can find their beer all over the world.</p>
                             <a href="https://www.blackislebrewery.com" target="_blank" class="btn btn-sm card-button">Visit Website</a>
                         </div>
                     </div>
@@ -225,7 +225,7 @@
                         <div class="card-body brew-card-body">
                             <h5 class="card-title"><strong>Cromarty Brewing Co.</strong></h5>
                             <p class="card-title text-uppercase">Davidston | Cromarty</p>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident libero amet ullam quae mollitia ipsam optio ipsum voluptatum beatae consequatur hic, illum aperiam tempore dolores nostrum, omnis odit impedit dicta!</p>
+                            <p class="card-text">Founding brewer Craig began the art of beer making in student accomodation and flat basements. Since then he has re-established the Cromarty brewery delivering completely non-pasteurised or filtered beer packed with flavour.</p>
                             <a href="https://www.cromartybrewing.com" target="_blank" class="btn btn-sm card-button">Visit Website</a>
                         </div>
                     </div>
@@ -236,7 +236,7 @@
                         <div class="card-body brew-card-body">
                             <h5 class="card-title"><strong>Six Degrees North</strong></h5>
                             <p class="card-title text-uppercase">Aberdeen</p>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident libero amet ullam quae mollitia ipsam optio ipsum voluptatum beatae consequatur hic, illum aperiam tempore dolores nostrum, omnis odit impedit dicta!</p>
+                            <p class="card-text">Six Degrees North brew classic belgian inspired beers, as well as modern, hop-forward styles. The brewery gets its name from the founders love of Belgian beer culture and tradition - and the brewery is situated Six Degrees North of Brussels.</p>
                             <a href="https://www.sixdnorth.co.uk" target="_blank" class="btn btn-sm card-button">Visit Website</a>
                         </div>
                     </div>
@@ -261,7 +261,7 @@
                         <div class="card-body brew-card-body">
                             <h5 class="card-title"><strong>Leann An Eilein</strong></h5>
                             <p class="card-title text-uppercase">Isle of Skye</p>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. A, nisi nesciunt error iusto vel quibusdam nobis quam, voluptas ducimus deserunt in aspernatur dolorem rem qui ipsum nulla saepe ullam maxime?</p>
+                            <p class="card-text">Skye brewery was born was some friends met in a local pub and conversation turned to the lack of good beer on Skye. Three years later they were ready to brew their first ale - Red Cuillin, which is the same recipe we see now in Skye Red.</p>
                             <a href="https://skyeale.com" target="_blank" class="btn btn-sm card-button">Visit Website</a>
                         </div>
                     </div>
@@ -272,7 +272,7 @@
                         <div class="card-body brew-card-body">
                             <h5 class="card-title"><strong>The Orkney Brewery</strong></h5>
                             <p class="card-title text-uppercase">Orkney Isles</p>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident libero amet ullam quae mollitia ipsam optio ipsum voluptatum beatae consequatur hic, illum aperiam tempore dolores nostrum, omnis odit impedit dicta!</p>
+                            <p class="card-text">Only the finest ingredients and purest Orcadian water can create these outstanding, full-of-flavour ales. So next time you sip one of their brews, you can be sure it was made with the best malt, hops, yeast, Orcadian water — and a long history of making quality ales.</p>
                             <a href="https://www.orkneybrewery.co.uk" target="_blank" class="btn btn-sm card-button">Visit Website</a>
                         </div>
                     </div>
@@ -283,7 +283,7 @@
                         <div class="card-body brew-card-body">
                             <h5 class="card-title"><strong>Arran Brewery</strong></h5>
                             <p class="card-title text-uppercase">Isle of Arran</p>
-                            <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium cumque error omnis inventore consequuntur excepturi impedit doloribus nisi, tempore illo eligendi alias, beatae quod, nobis quidem iste.</p>
+                            <p class="card-text">Situated off the West coast of Scotland the Isle of Arran is one of the most beautiful and dramatic islands in Europe. Using the island’s unique water and only the finest natural ingredients the brewery produces a wide range of beers and ales to suit every palette.</p>
                             <a href="https://www.arranbrewery.co.uk/home" target="_blank" class="btn btn-sm card-button">Visit Website</a>
                         </div>
                     </div>
@@ -294,7 +294,7 @@
                         <div class="card-body brew-card-body">
                             <h5 class="card-title"><strong>Islay Ales</strong></h5>
                             <p class="card-title text-uppercase">Isle of Islay</p>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam maiores corporis eius alias, eum perferendis, voluptatem earum est, et animi ex iusto debitis nisi cum odit! Nam cupiditate debitis alias?</p>
+                            <p class="card-text">On Islay, men and women have been changing barley from the fields into world-class beers and whiskies since the age of the Vikings. We are a small, traditional 4-barrel brewery. We rely on experience, taste and aroma to guide our brewing process. </p>
                             <a href="https://www.islayales.com/" target="_blank" class="btn btn-sm card-button">Visit Website</a>
                         </div>
                     </div>
@@ -319,7 +319,7 @@
                         <div class="card-body brew-card-body">
                             <h5 class="card-title"><strong>Tempest Brewing Co.</strong></h5>
                             <p class="card-title text-uppercase">Galashiels</p>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident libero amet ullam quae mollitia ipsam optio ipsum voluptatum beatae consequatur hic, illum aperiam tempore dolores nostrum, omnis odit impedit dicta!</p>
+                            <p class="card-text">Beginning by brewing beers in a garage in Christchurch (NZ), Gavin & Annika founded the brewery in 2010, after friends from Scotland said "they couldn't buy beer like this back home". The brewery has been named in RateBeer's 100 best breweries in the world. </p>
                             <a href="https://www.tempestbrewco.com" target="_blank" class="btn btn-sm card-button">Visit Website</a>
                         </div>
                     </div>
@@ -330,7 +330,7 @@
                         <div class="card-body brew-card-body">
                             <h5 class="card-title"><strong>Broughton Ales</strong></h5>
                             <p class="card-title text-uppercase">Biggar</p>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident libero amet ullam quae mollitia ipsam optio ipsum voluptatum beatae consequatur hic, illum aperiam tempore dolores nostrum, omnis odit impedit dicta!</p>
+                            <p class="card-text">Broughton Brewery is Scotland’s original independent brewery, founded in 1979. Since 1979, they have been hand-crafting our award winning range of ales, IPA’s, lagers, stouts and specialist Scottish beers.</p>
                             <a href="https://broughtonales.co.uk" target="_blank" class="btn btn-sm card-button">Visit Website</a>
                         </div>
                     </div>
