technologies added to README.md

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         <img src="https://images.unsplash.com/photo-1527980965255-d3b416303d12?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" class="align-self-center mr-3 customer-image d-none d-sm-block" alt="Customer Image">
                         <div class="media-body">
                             <h5 class="headings">Martin J</h5>
-                            <p class="content-text">I love Tartan Taps. The beers are always delivered on the date of my choosing, and there is always a good variety. When I have changed the crate sizes, or delivery date, this was easily done on the website, and was completely hassle free. </p>
+                            <p class="content-text">"I love Tartan Taps. The beers are always delivered on the date of my choosing, and there is always a good variety. When I have changed the crate sizes, or delivery date, this was easily done on the website, and was completely hassle free."</p>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -146,7 +146,7 @@
                         <img src="https://images.unsplash.com/photo-1508214751196-bcfd4ca60f91?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" class="align-self-center mr-3 customer-image d-none d-sm-block" alt="Customer Image">
                         <div class="media-body">
                             <h5 class="headings">Susan T</h5>
-                            <p class="content-text">I'd highly recommend Tartan Taps to anyone. Signed up 6 months ago as a present to my husband and he couldn't be happier. The only thing he complains about is when I pinch a beer for myself. They are very helpful, friendly and efficient. </p>
+                            <p class="content-text">"I'd highly recommend Tartan Taps to anyone. Signed up 6 months ago as a present to my husband and he couldn't be happier. The only thing he complains about is when I pinch a beer for myself. They are very helpful, friendly and efficient."</p>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
