beer url's added to README.md

--- a/beers.html
+++ b/beers.html
@@ -314,7 +314,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-2 beer-image-container">
-                    <img src="https://lirp-cdn.multiscreensite.com/5c9dbd84/dms3rep/multi/opt/IA_SaligoWEB-1920w.jpg" alt="Saligo Golden Ale" class="beer-image">
+                    <img src="https://untappd.akamaized.net/site/beer_logos_hd/beer-78450_68e26_hd.jpeg" alt="Saligo Golden Ale" class="beer-image">
                     <div class="overlay">
                         <h5 class="card-title">Saligo Golden Ale</h5>
                         <p class="card-text"><small>A golden summer ale brewed with Pale Ale, Lager and Wheat malts. Goldings hops for bittering and Bramling Cross are used as both a flavour and aroma hop.</small></p>
@@ -332,7 +332,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-2 beer-image-container">
-                    <img src="https://d2j6dbq0eux0bg.cloudfront.net/images/15078107/1703990852.jpg" alt="Hopocrisy Ale" class="beer-image">
+                    <img src="https://images.squarespace-cdn.com/content/v1/5743328322482e6a525abbcc/1552488937191-UMMDMJWS77856UKMYNFH/ke17ZwdGBToddI8pDm48kLwj3d5FoMQAiNT4Uw7VKeF7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z4YTzHvnKhyp6Da-NYroOW3rv7sVmavAApj1cuSnuUyXzqqXjS3CfNDSuuf31e0tVEygdIEUeU3YOIN93969xnEnK2RQAEb4Ox1wlZQJ51HaT6WcYmNGe_WPY_pAIl2T9w/hopocrisy-01.jpg?format=2500w" alt="Hopocrisy Ale" class="beer-image">
                     <div class="overlay">
                         <h5 class="card-title">Hopocrisy Pale Ale</h5>
                         <p class="card-text"><small>Hopocrisy has been dry hopped with ekuanot and is packed with super fresh aromas. The palate is full of apple and apricot notes, balanced with a floral finish. </small></p>
@@ -428,7 +428,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-2 beer-image-container">
-                    <img src="https://noblegreen-production.s3-eu-west-2.amazonaws.com/spree/images/16422/large/OR0QZZBK-1.png?1606933966" alt="Dark Island Stout" class="beer-image">
+                    <img src="https://products3.imgix.drizly.com/ci-dark-island-500-cb8b906e3b3afcfd.jpeg?auto=format%2Ccompress&fm=jpg&q=20" alt="Dark Island Stout" class="beer-image">
                     <div class="overlay">
                         <h5 class="card-title">Dark Island</h5>
                         <p class="card-text"><small>Dark Island offers ripe, fruity and roast coffee aromas with flavours of dark chocolate, dates and nuts, from the combination of roasted malts and robust hops.</small></p>
