sticky-top added to navbar on all pages

--- a/breweries.html
+++ b/breweries.html
@@ -60,40 +60,40 @@
                 </div> 
             </div>
         </div>
-
-        <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg navbar-dark justify-content-center navbar-custom">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            
-            <div class="collapse navbar-collapse justify-content-center menu" id="navbarNavDropdown">
-                <ul class="navbar-nav navbar-center">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Beers</a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="beers.html">All Beers</a>
-                            <a class="dropdown-item" href="/beers.html#lagers-pilsners">Lagers & Pilsners</a>
-                            <a class="dropdown-item" href="/beers.html#ipa-ale">IPA's & Pale Ales</a>
-                            <a class="dropdown-item" href="/beers.html#stouts-porters">Stouts & Porters</a>
-                        </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="breweries.html">Breweries</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="crates.html">Customize Your Crate</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact-us.html">Contact Us</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>    
     </header>
+
+    <!-- Navbar -->   
+    <nav class="navbar navbar-expand-lg navbar-dark justify-content-center navbar-custom sticky-top">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+            
+        <div class="collapse navbar-collapse justify-content-center menu" id="navbarNavDropdown">
+            <ul class="navbar-nav navbar-center">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Beers</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="beers.html">All Beers</a>
+                        <a class="dropdown-item" href="/beers.html#lagers-pilsners">Lagers & Pilsners</a>
+                        <a class="dropdown-item" href="/beers.html#ipa-ale">IPA's & Pale Ales</a>
+                        <a class="dropdown-item" href="/beers.html#stouts-porters">Stouts & Porters</a>
+                    </div>
+                </li> 
+                <li class="nav-item">
+                    <a class="nav-link active" href="breweries.html">Breweries</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="crates.html">Customize Your Crate</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact-us.html">Contact Us</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
     <!-- breweries.html hero image -->
     <section>
