testing firs time visitor goals answered on README.md

--- a/contact-us.html
+++ b/contact-us.html
@@ -138,6 +138,10 @@
                         <summary><strong>Are there any hidden fees or cancellation costs?</strong></summary>
                         <p>No. There are no hidden fees, and no additional costs to pause or cancel your subscription</p>
                     </details>
+                    <details class="content-text text-center faq-questions">
+                        <summary><strong>How do I cancel or pause my subscription?</strong></summary>
+                        <p>Simply fill out the form letting us know how long you wish your subscription to be paused for, or if you wish to cancel. We will send email confirmation of any changes made to your subscription.</p>
+                    </details>
                 </div>
 
                 <!-- Contact us form -->
